feat: add delete language
