# src/controllers/languages-controller.go
@@ -61,3 +61,23 @@ func AddLanguage(c *gin.Context) {
 
 	c.JSON(201, language)
 }
+
+func DeleteLanguage(c *gin.Context) {
+	id := c.Param("id")
+	languageID, err := strconv.ParseUint(id, 10, 32)
+
+	if err != nil || languageID <= 0 {
+		c.JSON(400, gin.H{"error": "Invalid ID"})
+		return
+	}
+
+	db := c.MustGet("DB").(*gorm.DB)
+	languageRepository := repositories.NewLanguageRepository(db)
+
+	if err := languageRepository.DeleteLanguage(uint(languageID)); err != nil {
+		c.JSON(404, gin.H{"error": "Language not found"})
+		return
+	}
+
+	c.Status(204) // No Content
+}
